# buoy-english-learning

./: .dockerignore  .gitignore  AZURE_OPENAI_SETUP.md  Dockerfile  README.md  dev_assistant_ids.json  fly.toml  main.py  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: ai_service.py
app/core/: config.py
app/services/: r2_service.py
tests/: conftest.py  test_openai_tts_and_stt.py
